--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ subjects:
 - !lcsh 'Authors, English'
 - !lcsh 'James I, King of England, 1566-1625'
 - !lcc 'PN'
+- GITenberg
 title: 'Literary Character of Men of Genius
 
   Drawn from Their Own Feelings and Confessions'
